--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+* {
+  font-family: 'Inter', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  font-family:'Inter', sans-serif;
 }
 
 .App-logo {
@@ -36,3 +46,4 @@
     transform: rotate(360deg);
   }
 }
+
