--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -47,7 +47,7 @@
   }
 
   .nav-links {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 1rem;
     margin-top: 10px;
@@ -55,7 +55,7 @@
 
   .nav-links a {
     font-size: 1rem;
-    padding: 10px;
+    padding: 4px;
     width: 100%;
     text-align: center;
     border-radius: 6px;
